[package]
name = "shuttle-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = "0.35.0"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["shuttle-runtime"]
shuttle-runtime = ["shuttle-axum/shuttle-runtime"] 